# felixcaldeira.de

./: .env  Cargo.toml  README.md  env.example  index.html  service.example  style.css
migrations/: 20250816195950_initial.sql  20250818201736_remove_photos_image_url.sql
src/: config.rs  database.rs  main.rs
src/handlers/: about.rs  admin.rs  contact.rs  error.rs  home.rs  mod.rs  photography.rs  projects.rs
src/midware/: auth.rs  error.rs
src/models/: mod.rs  photo.rs  project.rs  user.rs
static/css/: style.css
static/favicon/: site.webmanifest
templates/: about.html  base.html  contact.html  error.html  home.html  photography.html  photos.html  projects.html
templates/admin/: dashboard.html  login.html
