[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1.0", features = ["full"] }

# Database (using rustls instead of openssl)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "migrate"] }

# Templating
tera = "1.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication (rustls version)
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Environment variables
dotenvy = "0.15"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client (if needed, using rustls)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }